k8s/cherenkov-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cherenkov
  namespace: cherenkov
spec:
  selector:
    app: cherenkov
  ports:
    - port: 8000
      targetPort: 8000
      name: http
