k8s/prism-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prism
  namespace: cherenkov
spec:
  selector:
    app: prism
  ports:
    - port: 4010
      targetPort: 4010
      name: http
